# ansible-collection-apps

./: LICENSE  galaxy.yml  pyproject.toml
roles/gitolite/defaults/: main.yml
roles/gitolite/handlers/: main.yml
roles/gitolite/meta/: main.yml
roles/gitolite/tasks/: main.yml
roles/gitolite/templates/: gitolite.rc.j2
roles/gitolite/vars/: main.yml
roles/registry/defaults/: main.yml
roles/registry/handlers/: main.yml
roles/registry/meta/: main.yml
roles/registry/tasks/: main.yml  variables.yml
roles/registry/templates/: registry-ui.container.j2  registry.container.j2  registry.volume.j2
roles/registry/vars/: main.yml
