[tool.poetry]
name = "ansible-collection-apps"
version = "0.1.0"
description = "Ansible collection to install useful apps"
authors = ["Travis Lyons <trly@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^9.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
